@@ -1,3 +1,8 @@
+2003-09-24  Frederic Crozat  <fcrozat@mandrakesoft.com>
+
+	* Makefile.am:
+	Remove intltool generated tools on distclean, not clean.
+
 2003-09-16  Bastien Nocera  <hadess@hadess.net>
 
 	* tests/mb-test.c: (metadata_cb), (main):
